--- a/SleepTimer/Info.plist
+++ b/SleepTimer/Info.plist
@@ -22,5 +22,7 @@
 	<string>public.app-category.utilities</string>
 	<key>LSUIElement</key>
 	<true/>
+	<key>NSPrincipalClass</key>
+	<string>NSApplication</string>
 </dict>
 </plist>
